--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewpoint" content="width=device width, initial-scale=1.0">
-,<title>alurabooks</title>
+alurabooks<title>alurabooks</title>
 <LInk rel="stylesheet" href="styles.css">
 </head>
 
