--- a/index.html
+++ b/index.html
@@ -14,3 +14,28 @@ alurabooks<title>alurabooks</title>
 </body>
 
 </html>
+<div class="cartao__conteudo__pergunta">
+    <p>O que é Java Script?</p>
+    </div>                        
+    <div class="cartao__conteudo__resposta">
+    <p>O Java Script é uma linguagem de programação.</p>
+    </div>
+    <div class="cartao__conteudo__pergunta">
+        <p>O que é CSS?</p>
+    </div>                        
+    <div class="cartao__conteudo__resposta">
+        <p>O CSS é uma linguagem de estilização.</p>
+    </div>
+    .cartao 
+    <article class=".cartao">
+        <div class="cartao__conteudo">
+            <h3> Programação </h3>
+            <div class="cartao__conteudo__pergunta">
+                <p>O que é CSS?</p>
+            </div>                        
+            <div class="cartao__conteudo__resposta">
+                <p>O CSS é uma linguagem de estilização.</p>
+            </div>
+        </div>
+    </article>
+    
